[gd_scene load_steps=2 format=3 uid="uid://dhunatah3wcgh"]

[ext_resource type="Script" path="res://scenes/steam/lobby.gd" id="1_w5ej0"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_w5ej0")
metadata/_edit_lock_ = true

[node name="Chat" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 490.0
offset_bottom = 105.0
text = "Hello"

[node name="Lobbies" type="Panel" parent="."]
layout_mode = 0
offset_left = 521.0
offset_top = 8.0
offset_right = 632.0
offset_bottom = 221.0

[node name="Title" type="Label" parent="Lobbies"]
layout_mode = 0
offset_left = 26.0
offset_top = 12.0
offset_right = 85.0
offset_bottom = 36.0
text = "Lobbies"

[node name="List" type="VBoxContainer" parent="Lobbies"]
layout_mode = 0
offset_left = 14.0
offset_top = 51.0
offset_right = 92.0
offset_bottom = 197.0

[node name="Output" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 126.0
offset_right = 478.0
offset_bottom = 227.0

[node name="ChatInput" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 240.0
offset_right = 508.0
offset_bottom = 272.0

[node name="SendChat" type="Button" parent="."]
layout_mode = 0
offset_left = 526.0
offset_top = 239.0
offset_right = 585.0
offset_bottom = 271.0
text = "Send"

[node name="Refresh" type="Button" parent="."]
layout_mode = 0
offset_left = 594.0
offset_top = 239.0
offset_right = 658.0
offset_bottom = 271.0
text = "Refresh"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 666.0
offset_top = 239.0
offset_right = 729.0
offset_bottom = 271.0
text = "Close"

[node name="LobbyBtns" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 641.0
offset_top = 9.0
offset_right = 723.0
offset_bottom = 221.0

[node name="Create" type="Button" parent="LobbyBtns"]
layout_mode = 2
focus_mode = 0
text = "Create"

[node name="List" type="Button" parent="LobbyBtns"]
layout_mode = 2
focus_mode = 0
text = "List"

[node name="Data" type="Button" parent="LobbyBtns"]
layout_mode = 2
focus_mode = 0
text = "Data"

[node name="Leave" type="Button" parent="LobbyBtns"]
layout_mode = 2
focus_mode = 0
text = "Leave"

[node name="Send" type="Button" parent="LobbyBtns"]
layout_mode = 2
focus_mode = 0
text = "Send"

[node name="Back" type="Button" parent="LobbyBtns"]
layout_mode = 2
focus_mode = 0
text = "Back"
